style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400&display=swap');

:root {
  --blue-twitter: #25004e;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Poppins', sans-serif;
  display: flex;
  flex-direction: row;
  margin: 0 auto;
  align-content: center;
  max-width: 500px;
  width: 100%;
  background-image: url('./assets/drawings-background.jpg');
  background-repeat: repeat;
  color: var(--blue-twitter);
}

body div#root {
  background-color: rgba(158, 185, 177, 0.8);
  padding: 0px 20px;
  margin: 15px 0;
  border-radius: 12px;
  font-weight: 600;
  line-height: 30px;
}

div#root header h1 {
  font-size: 40px;
  margin: 20px 0 20px 0;
  letter-spacing: 5px;
  display: flex;
  justify-content: space-around;
}

div#root header p#description {
  margin-bottom: 10px;
}

div#root form#survey-form {
  display: flex;
  flex-direction: column;
}

div#form-control {
  display: flex;
  justify-content: space-between;
}

div.gender {
  flex-direction: row;
  align-content: flex-start;
  align-items: center;
  width: 50%;
}

div#root form label {
  font-weight: bold;
  margin-right: 2px;
}

div#root form input#name,
div#root form input#email,
div#root form input#number {
  width: 230px;
  height: 22px;
  border: none;
  padding-left: 2px;
  border-radius: 3px;
  background-color: rgba(255, 255, 255, 0.8);
}

div#root form#survey-form div#form-control select#dropdown {
  background-color: rgba(255, 255, 255, 0.8);
  border: none;
  border-radius: 3px;
  padding-left: 2px;
}

div#root form fieldset {
  line-height: normal;
  padding-left: 4px;
}

div .comments {
  display: flex;
  flex-direction: column;
}

div .comments textarea {
  margin: 5px 0;
  border-radius: 5px;
  border: none;
  padding: 5px;
  background-color: rgba(255, 255, 255, 0.8);
}

div#root form button {
  background-color: var(--blue-twitter);
  color: white;
  font-weight: 600;
  font-size: 15px;
  letter-spacing: 2px;
  border: none;
  padding: 10px 20px;
  margin: 4px 0px 20px 0px;
  border-radius: 12px;
  width: 50%;
  margin-left: auto;
  cursor: pointer;
}

div#root form button:hover {
  transform: scale(1.1);
}

